bringing back the client ID on login and register requests